# lam-injection

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CHUNK7_DOCS.md  CHUNK7_SUMMARY.txt  CONTEXT.md  DEMO_MODE_GUIDE.md  Dockerfile  FIX_GEMINI_HANGING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  OPTIMIZATION_SUMMARY.md  PPT_CANVA_PROMPT.md  README.md  RESEARCH_MASTER_INDEX.md  RESEARCH_PAPER_SETUP.md  RESEARCH_QUICKSTART.md  __init__.py  check_setup.py  demo_complete.py  docker-compose.yml  pyproject.toml  pytest.ini  regenerate_plots.py  requirements.txt  run_demo.py  run_research_experiment.bat  setup_dev.bat  test_gemini_connection.py  update_context.py  update_context_chunk6.py  verify_imports.py
analysis/: __init__.py  metrics.py  visualize.py
attacks/: __init__.py  generator.py
defenses/: __init__.py  detector.py  sanitizer.py  verifier.py
demo/: GRAPH_PATTERNS.md  QUICK_START.md  README_DEMO.md  report.MD  run_both_demos.bat  run_both_demos.py  run_demo.py
docs/: CONTROLLER_GUIDE.md  LLM_WRAPPER_GUIDE.md  PRESENTATION_WALKTHROUGH.md
envs/: __init__.py  gridworld.py
examples/: batch_analysis.py  custom_experiment.py  quick_benchmark.py
experiments/: __init__.py  batch.py  multi_model_comparison.py  runner.py  transferability.py
llm/: __init__.py  gemini_client.py  mock_responses.py  ollama_client.py  wrapper.py
logs/: CHUNK10_SUMMARY.txt  CHUNK8_SUMMARY.txt  CHUNK9_SUMMARY.txt  CHUNK_5_SUMMARY.md  CHUNK_6_SUMMARY.md
notebooks/: analysis_demo.ipynb  demo_comparison.ipynb
runner/: __init__.py  controller.py
scripts/: demo_attack_generator.py  (+8 more)
(+40 files in other folders)
